# temp

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
cmake/: Utils.cmake
src/libcurl/: __init__.py  cylibcurl.pyx
tests/: test_curl_basic.py
yyaml/: fix.patch
yyaml/src/: yyaml.c
