[build-system]
requires = [
    "scikit-build-core[pyproject]<0.11.6",
    "cython",
]
build-backend = "scikit_build_core.build"

[project]
name = "libcurl-dev"
version = "0.1.0"
description = "Python bindings for libcurl using Cython"
authors = [
    {name = "Mohammad Raziei", email = "mohammadraziei1375@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "scikit-build-core[pyproject]<0.11.6",
    "cython",
]

[project.scripts]
libcurl = "libcurl.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/mohammadraziei/libcurl-dev"
"Bug Tracker" = "https://github.com/mohammadraziei/libcurl-dev/issues"
"Document" = "https://mohammadraziei.github.io/libcurl-dev"


[tool.scikit-build.cmake]
version = ">=3.15"
build-type = "Release"

[tool.scikit-build]
sdist.include = [
    "src/third_party/curl/**/*"
]
build-dir = "build"


[tool.cibuildwheel]
skip = "*i686*"
test-command = "pytest {project}/tests"
test-extras = ["test"]

[tool.cibuildwheel.linux]
repair-wheel-command = "cp {wheel} {dest_dir}/"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
